[tool.poetry]
name = "python-chargepoint"
version = "2.2.0"
description = "A simple, Pythonic wrapper for the ChargePoint API."
authors = ["Marc Billow <mbillow@users.noreply.github.compoetry>"]
license = "MIT"
packages = [
    { include = "python_chargepoint" },
]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.9"
pydantic = "^2.12"
click = "^8.1"

[tool.poetry.scripts]
chargepoint = "python_chargepoint.__main__:cli"

[tool.poetry.group.dev.dependencies]
tox = "^3.24.5"
black = "^25.1.0"
pytest = "^7.0"
aioresponses = "^0.7"
pytest-asyncio = "^0.23"
flake8 = "^7.2.0"
pytest-mock = "^3.7.0"
pytest-cov = "^3.0.0"
mypy = "^1.19.1"
pyright = "^1.1.408"
pre-commit = "^4.5.1"

[tool.mypy]
plugins = ["pydantic.mypy"]
ignore_missing_imports = true
check_untyped_defs = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
